# simple-md

./: .gitignore  README.md  container.def  example.env  pyproject.toml
data_md/: 15_ala.xyz  azobenzene.xyz  buckyball_catcher.xyz  c10h22.xyz  c10h4.xyz  c11h24.xyz  c11h4.xyz  c12h26.xyz  c12h4.xyz  c13h28.xyz  c13h4.xyz  c14h30.xyz  c14h4.xyz  c15h32.xyz  c15h4.xyz  c16h34.xyz  c16h4.xyz  c1h4.xyz  c2h2.xyz  c2h4.xyz  c2h6.xyz  c3h4.xyz  c3h8.xyz  c4h10.xyz  c4h4.xyz  c5h12.xyz  c5h4.xyz  c6h14.xyz  c6h4.xyz  c7h16.xyz  c7h4.xyz  c8h18.xyz  c8h4.xyz  c9h20.xyz  c9h4.xyz  cis-platin.xyz  crambin.xyz  dichlormethan.xyz  ferrocence.xyz  md17_aspirin.xyz  (+15 more)
scripts/: benchmark.py  eval_equivariance.py  evaluate.py  finetune.py  md.py  train.py
scripts/conf/: base_conf.py
scripts/lib/: ema.py  loss.py  lr_scheduler.py  train_loop.py  types.py
scripts/lib/data/: loaders.py  transforms.py
scripts/lib/datasets/: __init__.py  datasets.py  ko2020.py  load_atoms_datasets.py  md17_22.py  md17_ccsd.py  qcml.py  qm7x.py  qm7x_pbe0.py  rmd17.py  utils.py
scripts/lib/models/: __init__.py  pair_encoder.py
scripts/lib/utils/: augmentation.py  checkpoint.py  dataset.py  dist.py  filters.py  helpers.py  job.py  log.py  run.py  wandb.py
scripts/test/: test_anix.py  test_ko2020.py  test_md17_22.py  test_qm7x.py  test_rmd17.py
scripts/tools/: convert_tool.py  preprocess_fixed_splits_qcml.py
